--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -4,7 +4,7 @@
   background-color: #95dada;
   border: 1px solid grey;
   border-radius: 5px;
-  padding: 25px;
+  padding: 15px;
   cursor: pointer;
   -moz-osx-font-smoothing: grayscale;
   backface-visibility: hidden;
@@ -14,4 +14,28 @@
 
 .card-container:hover {
   transform: scale(1.05);
+}
+
+.card-container h2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Limit number of lines to 2 */
+  -webkit-box-orient: vertical;
+}
+
+.card-container p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media (max-width: 768px) {
+  .card-container {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .card-container {
+    padding: 5px;
+  }
 }
